# GXC-goldxcoin-blockchain-

./: .dockerignore  .gitignore  .vercelignore  .vercelrc.example  ADDRESS_SYSTEM_EXPLAINED.md  ADDRESS_TRACKING_SUMMARY.md  ADMIN_API_COMPLETE.md  ADMIN_API_COMPLETE_REFERENCE.md  ADMIN_API_IMPLEMENTATION.md  ADMIN_API_STATUS.md  ADMIN_API_TESTING_URLS.md  ADMIN_API_TEST_GUIDE.md  ADMIN_API_TEST_RESULTS.md  ADMIN_API_TODO.md  ADMIN_DASHBOARD_QUICK_START.md  ADMIN_LOGIN_FIXED.md  ADMIN_QUICK_START.md  ADMIN_SYSTEM_BUILD_COMPLETE.md  ADMIN_SYSTEM_FINAL_SUMMARY.md  ADMIN_SYSTEM_INTEGRATION.md  ADMIN_SYSTEM_RAILWAY_STATUS.md  ADMIN_SYSTEM_SUMMARY.md  ADMIN_SYSTEM_TEST_REPORT.md  ADMIN_SYSTEM_TEST_RESULTS.md  ADVANCED_FEATURES_SUMMARY.md  ADVANCED_FEATURES_TO_ADD.md  ADVANCED_MARKET_MAKER_FEATURES.md  ALGORITHM_CONFIGURATION.md  ALL_ALGORITHMS_WORKING.md  ALL_FEATURES_IMPLEMENTED.md  ALL_FIXES_COMPLETE.md  ALL_MINERS_FIXED.md  ALL_MINERS_HAVE_GUI.md  ALL_TESTS_EXECUTED.md  ALL_TESTS_RESULTS.md  ALL_WALLET_TESTNET_FIXES_SUMMARY.md  AMOUNT_MATCHING_VERIFICATION.md  API_ARCHITECTURE_EXPLAINED.md  API_COMPLETE_REFERENCE.md  API_DOCUMENTATION.md  (+699 more)
.claude/: settings.local.json
GXC-CORE/: .gitignore  CONTRIBUTING.md  DATABASE_PERSISTENCE.md  LICENSE  RAILWAY_DEPLOYMENT.md  README.md  SECURITY.md
GXC-MANAGEMENT-STOCK/: REGULATOR_API_DOCUMENTATION.md
api/: GXHASH-MINER.py  api.py  bip39_wordlist.py  explorer.py  forum.py  forum_realtime.py  market_maker.py  requirements.txt  vercel.json  vercel_explorer.json  wallet_service.py
benchmarks/: benchmark_main.cpp
config/: gxc-production.conf  gxc-railway.conf  gxc-testnet.conf  gxc.conf.example  railway_config.py
docs/: command_cheat_sheet.md
docs_site/: api.py  docs_app.py  requirements.txt  vercel.json
examples/: README.md  admin_dashboard.html  wallet_integration.js  wallet_integration.py
forum_realtime/: api.py  forum_realtime_server.py  requirements.txt  vercel.json
gui/: MainWindow.h
gxc-peer-node/: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SETUP_GUIDE.md  config-railway.toml
gxc-peer-node/.github/workflows/: rust.yml
gxc-peer-node/src/: main.rs
gxc-peer-node/src/blockchain/: block.rs  mod.rs  sync.rs  validator.rs
gxc-peer-node/src/config/: mod.rs
gxc-peer-node/src/p2p/: message.rs  mod.rs  network.rs  peer.rs
gxc-peer-node/src/rpc/: client.rs  mod.rs
gxc_data/: .gitignore  blockchain.db  blockchain.db-shm  blockchain.db-wal  blockchain_mainnet.db-shm  blockchain_mainnet.db-wal  blockchain_testnet.db-shm  blockchain_testnet.db-wal
gxc_testnet_data/: blockchain.db
include/: Argon2id.h  Block.h  Config.h  Database.h  EthashAlgorithm.h  ExplorerAPI.h  FraudDetection.h  GoldToken.h  Governance.h  HashUtils.h  Keccak256.h  Logger.h  MarketMakerAdmin.h  MessageHandler.h  Network.h  PeerManager.h  ProofGenerator.h  ProofOfPrice.h  RESTServer.h  RPCAPI.h  ReversalExecutor.h  ReversalFeePool.h  SalectValidator.h  StakingPool.h  StockContract.h  StockMarketAPI.h  Stratum.h  Utils.h  Validator.h  ValidatorRegistry.h  Wallet.h  block.h  blockchain.h  gold_token.h  gxc_coin.h  pop_oracle.h  transaction.h  transaction_tracker.h
market_maker/: DEVELOPMENT_VS_PRODUCTION.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  admin_api.py  advanced_api.py  advanced_features.py  api.py  asset_types.py  start_production.bat  start_production.sh  stock_market_maker.py  wsgi_server.py
miner_manager/: manage_miner.py
miners_release/: README.md  install.sh
mining/: CHECK_BALANCE.py  GXCMiner.h  MinerGUI.cpp  README.md  ethash_main.cpp  gxhash_main.cpp  gxhash_miner.py  main.cpp  miner_gui_main.cpp  pool_proxy_gui_main.cpp  pool_proxy_main.cpp  pyinstaller.spec  sha256_main.cpp
mining_pool/: .vercelignore  DEPLOYMENT_SUCCESS.md  DEPLOY_VERCEL.md  Procfile  __init__.py  api.py  api_asic.py  api_general.py  api_gpu.py  asic_pool.py  deploy-railway.ps1  deploy.ps1  deploy.sh  deploy_railway.sh  general_pool.py  gpu_pool.py  pool_base.py  pool_config.py  railway.toml  requirements.txt  vercel.json  vercel_asic.json  vercel_gpu.json
myenv/: pyvenv.cfg
python/: gxc_api.py  stock_contracts.py
scripts/: build-all-miners.ps1  build-all-miners.sh  build-installers.sh  create-standalone-packages.ps1  create-standalone-packages.sh  deploy-blockchain.sh  ensure_python_deps.py  install-dependencies.sh  install-miners.ps1  install-miners.sh  package-cpp-miners.ps1  package-cpp-miners.sh  production-deploy.sh  quick-install.ps1  quick-install.sh  security-hardening.sh  setup-oracle-cloud-free.sh  start-testnet-full.ps1  start-testnet.ps1  start_ecosystem.sh  stop-testnet-full.ps1  stop-testnet.ps1  test-testnet.ps1
src/: Argon2id.cpp  Blake2b.cpp  Blockchain.cpp  Blockchain.cpp_diff_register  CPUMiner.cpp  Config.cpp  Crypto.cpp  Database.cpp  EthashAlgorithm.cpp  FraudDetection.cpp  HashUtils.cpp  Logger.cpp  MarketMakerAdmin.cpp  MessageHandler.cpp  Network.cpp  P2PNetwork.cpp  PeerManager.cpp  ProofOfPrice.cpp  RESTServer.cpp  RESTServer_AdminAPIs.cpp  RPCAPI.cpp  RPCAPI.cpp_diff_sendtoaddress  SalectValidator.cpp  StakingPool.cpp  StockMarketAPI.cpp  Stratum.cpp  Transaction.cpp  Utils.cpp  Validator.cpp  ValidatorRegistry.cpp  Wallet.cpp  WebSocketServer.cpp  arith_uint256.cpp  block.cpp  gxc-block.py  main.cpp  node_main.cpp
templates/: index.html  transaction.html
tests/: TEST_RESULTS.md  Test_Balance_Logic.cpp  test_admin_management.cpp  test_admin_simple.cpp  test_admin_system.cpp  test_all_algorithms.cpp  test_all_apis.cpp  test_api.cpp  test_api_input_validation.py  test_balance_and_validation.cpp  test_balance_logic.cpp  test_block_validation.cpp  test_blockchain.cpp  test_crypto.cpp  test_database.cpp  test_database_connection_fix.py  test_fraud_detection.cpp  test_governance.cpp  test_main.cpp  test_mining.cpp  test_mining_rewards.cpp  test_network.cpp  test_script.cpp  test_script_link.cpp  test_security.cpp  test_simple_mining.cpp  test_staking.cpp  test_stock_api_simple.cpp  test_stock_contracts.cpp  test_stock_market_api.cpp  test_stock_simple.cpp  test_tokens.cpp  test_transaction_staking_fixes.cpp  (+6 more)
(+248 files in other folders)
